--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  
 }
 
 .App-logo {
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+.Container{
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr;
+  place-content: center;
+  place-items: center;
+}
+
