--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr, 1fr;
+  place-content: centre;
+  place-items: centre;
+
+}
